@@ -1,3 +1,9 @@
+20140126:
+- new feature: set option defaults in ~/.mbuffer.rc
+- enhancement: write status to the log file
+- enhancement: added option to suppress status logging
+- fix: formatting fix for summary message
+
 20130220:
 - reverted incorrect fix for -P 100, which may lead to data corruption
 - reenable hash libraries (no correlation with data corruption)
